fix snowflake  startup